<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskfocus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_projectList_to_taskList"
            app:destination="@id/tasklistFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.taskfocus.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskfocus.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/tasklistFragment"
        android:name="com.example.taskfocus.ui.task.TasklistFragment"
        android:label="fragment_tasklist"
        tools:layout="@layout/fragment_tasklist">
        <action
            android:id="@+id/tasklist_to_projectlist"
            app:destination="@id/navigation_home" />

    </fragment>
</navigation>