<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/layout"
    android:background="@color/bg"
    tools:context=".ui.task.TasklistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_md"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_to_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_sm"
            android:src="@drawable/arrow_left" />

        <TextView
            android:id="@+id/project_title_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Название проекта"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_xl"
            android:textStyle="bold" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_marginTop="@dimen/space_md"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/planing"
                    android:textColor="@color/text_primary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_todo"
                    style="@style/button.outline"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="@dimen/space_xl"
                    android:drawablePadding="8dp"
                    android:text="@string/newTask"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todo_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/inProccces"
                    android:textColor="@color/text_primary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_in_process"
                    style="@style/button.outline"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="@dimen/space_xl"
                    android:drawablePadding="8dp"
                    android:text="@string/newTask"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/in_process_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/complede"
                    android:textColor="@color/text_primary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_done"
                    style="@style/button.outline"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="@dimen/space_xl"
                    android:drawablePadding="8dp"
                    android:text="@string/newTask"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/done_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/freze"
                    android:textColor="@color/text_primary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_freezed"
                    style="@style/button.outline"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="@dimen/space_xl"
                    android:drawablePadding="8dp"
                    android:text="@string/newTask" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/freezed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>