<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".ui.settings.NotificationsFragment">

    <TextView
        android:id="@+id/textView5"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_md"
        android:text="@string/title_settings"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_xxl" />

    <!--    <Switch-->
    <!--        android:id="@+id/notifications"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="@dimen/space_md"-->
    <!--        android:text="Уведомления"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="16sp"-->
    <!--        tools:ignore="UseSwitchCompatOrMaterialXml" />-->


    <!--    <TextView-->
    <!--        android:id="@+id/textView8"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="12dp"-->
    <!--        android:text="Время уведомления*"-->
    <!--        android:textColor="@color/text_primary"-->
    <!--        android:textSize="@dimen/text_md" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:background="@drawable/container_shape"-->

    <!--android:gravity="center"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingLeft="16dp"-->
    <!--android:paddingTop="16dp"-->
    <!--android:paddingRight="16dp"-->
    <!--android:paddingBottom="16dp">-->


    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="@dimen/space_sm"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="horizontal">-->

    <!--        <TimePicker-->
    <!--            android:id="@+id/time_picker"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="150dp"-->
    <!--            android:timePickerMode="spinner" />-->

    <!--        <NumberPicker-->
    <!--            android:id="@+id/hour_picker_start"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="100dp"-->
    <!--            android:visibility="gone" />-->

    <!--        <TextView-->
    <!--            android:id="@+id/textView10"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:layout_marginLeft="12dp"-->
    <!--            android:layout_marginRight="12dp"-->
    <!--            android:gravity="center"-->
    <!--            android:text=":"-->
    <!--            android:textSize="24sp"-->
    <!--            android:visibility="gone" />-->

    <!--        <NumberPicker-->
    <!--            android:id="@+id/minute_picker_start"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="100dp"-->
    <!--            android:visibility="gone" />-->

    <!--    </LinearLayout>-->
    <!--</LinearLayout>-->

    <TextView
        android:id="@+id/lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/selectLang"
        android:textSize="@dimen/text_md" />

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginBottom="@dimen/space_xl"-->
    <!--            android:orientation="horizontal">-->

    <!--            <LinearLayout-->
    <!--                android:id="@+id/ruLang"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginRight="@dimen/space_md"-->
    <!--                android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                    android:id="@+id/imageView7"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="85dp"-->
    <!--                    android:src="@drawable/ru" />-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView17"-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:gravity="center"-->
    <!--                    android:text="@string/ru" />-->

    <!--            </LinearLayout>-->
    <!--        </LinearLayout>-->

    <!--            <LinearLayout-->
    <!--                android:id="@+id/engLang"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginEnd="@dimen/space_md"-->
    <!--                android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                    android:id="@+id/imageView8"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="85dp"-->
    <!--                    android:src="@drawable/eng" />-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView18"-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:gravity="center"-->
    <!--                    android:text="@string/eng" />-->
    <!--            </LinearLayout>-->
    <!--    </ScrollView>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_3xl"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ruSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_md"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ru" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ru" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/engSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_md"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eng" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/eng" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_md"
        android:text="@string/colorTheme"
        android:textSize="@dimen/text_md" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lightTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_md"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/light" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lightTheme" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/darkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_md"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dark" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/darkTheme" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/systemTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_md"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/system" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/systemTheme" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>